Add ID requests to dashboard

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -410,6 +410,9 @@ Outputs:
   DovetailCdnArrangerWorkspaceBucketArn:
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerWorkspaceBucketArn
 
+  IdTargetGroupFullName:
+    Value: !GetAtt IdStack.Outputs.TargetGroupFullName
+
   PlayProxyTargetGroupFullName:
     Value: !GetAtt PlayStack.Outputs.ProxyTargetGroupFullName
   PlayWebTargetGroupFullName:
