--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -275,3 +275,7 @@ Resources:
       AccessKeyId: !Ref SesSendingAccessKey
       SecretAccessKey: !GetAtt SesSendingAccessKey.SecretAccessKey
       Region: !Ref AWS::Region
+
+Outputs:
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
