--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1201,6 +1201,8 @@ Resources:
         FeederAlbName: !GetAtt Apps200AStack.Outputs.FeederAlbName
         FeederVanityAlbDomain: !GetAtt Apps200AStack.Outputs.FeederVanityAlbDomain
 
+        IdTargetGroupFullName: !GetAtt Apps100AStack.Outputs.IdTargetGroupFullName
+
         MetricsTargetGroupFullName: !GetAtt Apps300AStack.Outputs.MetricsTargetGroupFullName
 
         PlayProxyTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayProxyTargetGroupFullName
