--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -44,6 +44,8 @@ Parameters:
   FeederAlbName: { Type: String }
   FeederVanityAlbDomain: { Type: String }
 
+  IdTargetGroupFullName: { Type: String }
+
   MetricsTargetGroupFullName: { Type: String }
 
   PlayProxyTargetGroupFullName: { Type: String }
@@ -108,6 +110,7 @@ Resources:
                   "properties": {
                       "metrics": [
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CastleTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Castle" } ],
+                          [ ".", ".", ".", "${IdTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "ID" } ],
                           [ ".", ".", ".", "${MetricsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Metrics" } ],
                           [ ".", ".", ".", "${PlayProxyTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Proxy" } ],
                           [ ".", ".", ".", "${PlayWebTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Web" } ],
