Add CMS requests to dashboard

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -404,6 +404,8 @@ Outputs:
 
   CmsElasticsearchDomainName:
     Value: !GetAtt CmsStack.Outputs.ElasticsearchDomainName
+  CmsTargetGroupFullName:
+    Value: !GetAtt CmsStack.Outputs.TargetGroupFullName
 
   DovetailCdnArrangerFunctionArn:
     Value: !GetAtt DovetailCdnArrangerStack.Outputs.ArrangerFunctionArn
