--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -813,3 +813,6 @@ Resources:
 Outputs:
   ElasticsearchDomainName:
     Value: !Ref ElasticsearchDomain
+
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
