--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -37,6 +37,7 @@ Parameters:
   CastleTargetGroupFullName: { Type: String }
 
   CmsElasticsearchDomainName: { Type: String }
+  CmsTargetGroupFullName: { Type: String }
 
   DovetailAlbName: { Type: String }
   DovetailVanityAlbDomain: { Type: String }
@@ -110,6 +111,7 @@ Resources:
                   "properties": {
                       "metrics": [
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CastleTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Castle" } ],
+                          [ ".", ".", ".", "${CmsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "CMS" } ],
                           [ ".", ".", ".", "${IdTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "ID" } ],
                           [ ".", ".", ".", "${MetricsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Metrics" } ],
                           [ ".", ".", ".", "${PlayProxyTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Proxy" } ],
