--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1194,6 +1194,7 @@ Resources:
         CastleTargetGroupFullName: !GetAtt Apps200AStack.Outputs.CastleTargetGroupFullName
 
         CmsElasticsearchDomainName: !GetAtt Apps100AStack.Outputs.CmsElasticsearchDomainName
+        CmsTargetGroupFullName: !GetAtt Apps100AStack.Outputs.CmsTargetGroupFullName
 
         DovetailAlbName: !GetAtt Apps300AStack.Outputs.DovetailAlbName
         DovetailVanityAlbDomain: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
