Add Iframely requests to dashboard

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -415,6 +415,9 @@ Outputs:
   IdTargetGroupFullName:
     Value: !GetAtt IdStack.Outputs.TargetGroupFullName
 
+  IframelyTargetGroupFullName:
+    Value: !GetAtt IframelyStack.Outputs.TargetGroupFullName
+
   PlayProxyTargetGroupFullName:
     Value: !GetAtt PlayStack.Outputs.ProxyTargetGroupFullName
   PlayWebTargetGroupFullName:
