--- a/stacks/apps/iframely.yml
+++ b/stacks/apps/iframely.yml
@@ -235,3 +235,7 @@ Resources:
         - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: Iframely }
       TaskRoleArn: !GetAtt TaskRole.Arn
+
+Outputs:
+  TargetGroupFullName:
+    Value: !GetAtt TargetGroup.TargetGroupFullName
