--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -47,6 +47,8 @@ Parameters:
 
   IdTargetGroupFullName: { Type: String }
 
+  IframelyTargetGroupFullName: { Type: String }
+
   MetricsTargetGroupFullName: { Type: String }
 
   PlayProxyTargetGroupFullName: { Type: String }
@@ -113,6 +115,7 @@ Resources:
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CastleTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Castle" } ],
                           [ ".", ".", ".", "${CmsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "CMS" } ],
                           [ ".", ".", ".", "${IdTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "ID" } ],
+                          [ ".", ".", ".", "${IframelyTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Iframely" } ],
                           [ ".", ".", ".", "${MetricsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Metrics" } ],
                           [ ".", ".", ".", "${PlayProxyTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Proxy" } ],
                           [ ".", ".", ".", "${PlayWebTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Web" } ],
