--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1204,6 +1204,8 @@ Resources:
 
         IdTargetGroupFullName: !GetAtt Apps100AStack.Outputs.IdTargetGroupFullName
 
+        IframelyTargetGroupFullName: !GetAtt Apps100AStack.Outputs.IframelyTargetGroupFullName
+
         MetricsTargetGroupFullName: !GetAtt Apps300AStack.Outputs.MetricsTargetGroupFullName
 
         PlayProxyTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayProxyTargetGroupFullName
