--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -209,6 +209,10 @@ Resources:
               Value: !Ref SharedRedisReplicationGroupEndpointAddress
             - Name: REDIS_PORT
               Value: !Ref SharedRedisReplicationGroupEndpointPort
+            - Name: REDIS_NAMESPACE
+              Value: castle
+            - Name: REDIS_POOL_SIZE
+              Value: "2"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
