Remove legacy Dovetail Traffic stack

--- a/stacks/apps/dovetail-traffic.yml
+++ b/stacks/apps/dovetail-traffic.yml
@@ -55,7 +55,7 @@ Resources:
         KinesisTrigger:
           Properties:
             BatchSize: 1000
-            Enabled: false # TODO
+            Enabled: true
             StartingPosition: LATEST
             Stream: !Ref MetricsKinesisStreamArn
           Type: Kinesis
@@ -63,12 +63,12 @@ Resources:
           Properties:
             Queue: !GetAtt TrafficSqsQueue.Arn
             BatchSize: 1
-            Enabled: false # TODO
+            Enabled: true
           Type: SQS
         ScheduleTrigger:
           Properties:
             Schedule: !Sub rate(${kScheduleIntervalMinutes} minutes)
-            Enabled: false # TODO
+            Enabled: true
           Type: Schedule
       Handler: index.handler
       MemorySize: 128
