Only create Proxy utility domain in prod

--- a/stacks/serverless/proxy.prx.org.yml
+++ b/stacks/serverless/proxy.prx.org.yml
@@ -128,6 +128,7 @@ Resources:
   # of the domain.
   UtilityDomainName:
     Type: AWS::ApiGatewayV2::DomainName
+    Condition: CreateProductionResources
     Properties:
       DomainName: !If [CreateProductionResources, proxy.prx.tech, proxy.staging.prx.tech]
       DomainNameConfigurations:
@@ -140,12 +141,14 @@ Resources:
         prx:dev:application: Proxy
   UtilityApiMapping:
     Type: AWS::ApiGatewayV2::ApiMapping
+    Condition: CreateProductionResources
     Properties:
       ApiId: !Ref ProxyHttpApi
       DomainName: !Ref UtilityDomainName
       Stage: $default
   UtilityDomainNameRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
+    Condition: CreateProductionResources
     Properties:
       Comment: Record sets for proxy server API
       HostedZoneName: prx.tech.
