Add PRI domains to Proxy cert

--- a/stacks/apps/proxy.yml
+++ b/stacks/apps/proxy.yml
@@ -31,6 +31,8 @@ Resources:
       SubjectAlternativeNames: !If
         - IsProduction
         - - prx.org
+          - pri.org
+          - www.pri.org
           - proxy.prx.tech
         - !Ref AWS::NoValue
       Tags:
