Add pri.org Proxy domain mappings

--- a/stacks/apps/proxy.yml
+++ b/stacks/apps/proxy.yml
@@ -232,3 +232,44 @@ Resources:
   #     ApiId: !Ref ProxyHttpApi
   #     DomainName: !Ref WwwPrxOrgDomainName
   #     Stage: $default
+
+  PriOrgDomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Condition: IsProduction # .org domain for production only
+    Properties:
+      DomainName: pri.org
+      DomainNameConfigurations:
+        - CertificateArn: !Ref Certificate
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Proxy
+  PriOrgApiMapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Condition: IsProduction # .org domain for production only
+    Properties:
+      ApiId: !Ref ProxyHttpApi
+      DomainName: !Ref PriOrgDomainName
+      Stage: $default
+  WwwPriOrgDomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Condition: IsProduction # .org domain for production only
+    Properties:
+      DomainName: www.pri.org
+      DomainNameConfigurations:
+        - CertificateArn: !Ref Certificate
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Proxy
+  WwwPriOrgApiMapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Condition: IsProduction # .org domain for production only
+    Properties:
+      ApiId: !Ref ProxyHttpApi
+      DomainName: !Ref WwwPriOrgDomainName
+      Stage: $default
