Add Proxy API to dashboard

--- a/stacks/apps/proxy.yml
+++ b/stacks/apps/proxy.yml
@@ -279,3 +279,9 @@ Resources:
       ApiId: !Ref ProxyHttpApi
       DomainName: !Ref WwwPriOrgDomainName
       Stage: $default
+
+Outputs:
+  ApiId:
+    Value: !Ref ProxyHttpApi
+  ApiDefaultEndpoint:
+    Value: !Sub https://${ProxyHttpApi}.execute-api.${AWS::Region}.amazonaws.com
