--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1213,6 +1213,8 @@ Resources:
         PlayProxyTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayProxyTargetGroupFullName
         PlayWebTargetGroupFullName: !GetAtt Apps100AStack.Outputs.PlayWebTargetGroupFullName
 
+        ProxyApiDefaultEndpoint: !GetAtt Apps300AStack.Outputs.ProxyApiDefaultEndpoint
+
         PublishTargetGroupFullName: !GetAtt Apps200AStack.Outputs.PublishTargetGroupFullName
 
         RemixTargetGroupFullName: !GetAtt Apps200AStack.Outputs.RemixTargetGroupFullName
