--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -54,6 +54,8 @@ Parameters:
   PlayProxyTargetGroupFullName: { Type: String }
   PlayWebTargetGroupFullName: { Type: String }
 
+  ProxyApiDefaultEndpoint: { Type: String }
+
   PublishTargetGroupFullName: { Type: String }
 
   RemixTargetGroupFullName: { Type: String }
@@ -80,15 +82,15 @@ Resources:
                     "x": 6,
                     "y": 0,
                     "width": 18,
-                    "height": 7,
+                    "height": 9,
                     "properties": {
-                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n---\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n---\n- Backsaw bucket: **${BacksawDeployBucketRegionalDomainName}**\n- Beta bucket: **${BetaDeployBucketRegionalDomainName}**"
+                        "markdown": "\n# Details\n\n- Environment: **${EnvironmentType}**\n- Root stack: **[${RootStackName}](https://console.aws.amazon.com/cloudformation/home?region=${AWS::Region}#/stacks/stackinfo?stackId=${RootStackId})**\n- Infrastructure repository Git commit: **[${InfrastructureGitCommit}](https://github.com/PRX/Infrastructure/commit/${InfrastructureGitCommit})**\n- Shared VPC ID: **[${SharedVpcId}](https://console.aws.amazon.com/vpc/home?region=${AWS::Region}#VpcDetails:VpcId=${SharedVpcId})**\n- Shared VPC CIDR block: **${SharedVpcCidrBlock}**\n---\n- Shared ALB: **${SharedAlbVanityDomain}**\n- Feeder ALB: **[${FeederVanityAlbDomain}](https://${FeederVanityAlbDomain})**\n- Dovetail ALB: **[${DovetailVanityAlbDomain}](https://${DovetailVanityAlbDomain})**\n---\n- Backsaw bucket: **${BacksawDeployBucketRegionalDomainName}**\n- Beta bucket: **${BetaDeployBucketRegionalDomainName}**\n---\n- Proxy API: **[${ProxyApiDefaultEndpoint}](${ProxyApiDefaultEndpoint})**"
                     }
                 },
                 {
                     "type": "metric",
                     "x": 6,
-                    "y": 7,
+                    "y": 9,
                     "width": 6,
                     "height": 3,
                     "properties": {
@@ -107,7 +109,7 @@ Resources:
                 {
                   "type": "metric",
                   "x": 12,
-                  "y": 7,
+                  "y": 9,
                   "width": 12,
                   "height": 9,
                   "properties": {
