Add Proxy requests to dashboard

--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -55,6 +55,7 @@ Parameters:
   PlayWebTargetGroupFullName: { Type: String }
 
   ProxyApiDefaultEndpoint: { Type: String }
+  ProxyApiId: { Type: String }
 
   PublishTargetGroupFullName: { Type: String }
 
@@ -115,14 +116,15 @@ Resources:
                   "properties": {
                       "metrics": [
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CastleTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Castle" } ],
-                          [ ".", ".", ".", "${CmsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "CMS" } ],
-                          [ ".", ".", ".", "${IdTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "ID" } ],
-                          [ ".", ".", ".", "${IframelyTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Iframely" } ],
-                          [ ".", ".", ".", "${MetricsTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Metrics" } ],
-                          [ ".", ".", ".", "${PlayProxyTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Proxy" } ],
-                          [ ".", ".", ".", "${PlayWebTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Play::Web" } ],
-                          [ ".", ".", ".", "${PublishTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Publish" } ],
-                          [ ".", ".", ".", "${RemixTargetGroupFullName}", ".", "${SharedAlbFullName}", { "label": "Remix" } ]
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CmsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "CMS" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IdTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "ID" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IframelyTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Iframely" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${MetricsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Metrics" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PlayProxyTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Play::Proxy" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PlayWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Play::Web" } ],
+                          [ "AWS/ApiGateway", "Count", "ApiId", "${ProxyApiId}", { "label": "Proxy" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${PublishTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Publish" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${RemixTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Remix" } ]
                       ],
                       "view": "timeSeries",
                       "stacked": false,
