Update widget title

--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -130,7 +130,7 @@ Resources:
                       "stacked": false,
                       "region": "${AWS::Region}",
                       "period": 300,
-                      "title": "ALB Target Group Requests",
+                      "title": "Requests",
                       "stat": "Sum"
                   }
               }
