--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -115,7 +115,7 @@ Resources:
 
   EcsService:
     Type: AWS::ECS::Service
-    Condition: HasAuroraEndpoint # See README
+    # TODO Condition: HasAuroraEndpoint # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
@@ -202,7 +202,7 @@ Resources:
             - Name: DB_PORT_3306_TCP_ADDR
               Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
             - Name: DB_PORT_3306_TCP_PORT
-              Value: "3306"
+              Value: "3306" # TODO
             - Name: SMTP_ADDRESS
               Value: !Sub email-smtp.${AWS::Region}.amazonaws.com
             - Name: SMTP_AUTHENTICATION
