Allow Aurora traffic into private subnets

--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -62,6 +62,33 @@ Resources:
       RuleAction: allow
       RuleNumber: 141
 
+  # INGRESS 420
+  # Allows inbound Aurora traffic from all IPs within the VPC
+  InboundIpV4AuroraNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: false
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 3306
+        To: 3306
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 420
+  InboundIpV6AuroraNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 3306
+        To: 3306
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 421
+
   # INGRESS 520
   # Allows inbound Redis traffic from all IPs within the VPC
   InboundIpV4RedisNetworkAclEntry:
