Clone DTR to new redis

--- a/stacks/container-apps/dovetail.prx.org.yml
+++ b/stacks/container-apps/dovetail.prx.org.yml
@@ -53,6 +53,10 @@ Parameters:
     Type: String
   DovetailRouterSecretsVersion:
     Type: String
+  SharedRedisReplicationGroupEndpointAddress:
+    Type: String
+  SharedRedisReplicationGroupEndpointPort:
+    Type: String
 Mappings:
   EnvironmentTypeMap:
     Testing:
@@ -582,6 +586,14 @@ Resources:
               Value: !Ref DovetailRouterSecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: REDIS_CLONE_HOST
+              Value: !Ref SharedRedisReplicationGroupEndpointAddress
+            - Name: REDIS_CLONE_PORT
+              Value: !Ref SharedRedisReplicationGroupEndpointPort
+            - Name: REDIS_CLONE_NAMESPACE
+              Value: castle
+            - Name: REDIS_CLONE_POOL_SIZE
+              Value: "2"
           Essential: true
           Image: !Ref DovetailRouterEcrImageTag
           LogConfiguration:
