--- a/stacks/container-apps/dovetail.prx.org.yml
+++ b/stacks/container-apps/dovetail.prx.org.yml
@@ -591,9 +591,9 @@ Resources:
             - Name: REDIS_CLONE_PORT
               Value: !Ref SharedRedisReplicationGroupEndpointPort
             - Name: REDIS_CLONE_NAMESPACE
-              Value: castle
+              Value: dovetail
             - Name: REDIS_CLONE_POOL_SIZE
-              Value: "2"
+              Value: "4"
           Essential: true
           Image: !Ref DovetailRouterEcrImageTag
           LogConfiguration:
