Replace Castle-specific Redis

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -251,7 +251,7 @@ Resources:
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/serverless/"]]
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        CastleRedisPrimaryEndPointAddress: !GetAtt CastleStack.Outputs.RedisPrimaryEndPointAddress
+        CastleRedisPrimaryEndPointAddress: !GetAtt SharedRedisStack.Outputs.ReplicationGroupEndpointAddress
         UploadLambdaCodeS3ObjectKey: !Ref UploadLambdaCodeS3ObjectKey
         DovetailBytesLambdaCodeS3ObjectKey: !Ref DovetailBytesLambdaCodeS3ObjectKey
         DovetailCountsLambdaCodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
