--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -262,10 +262,10 @@ Resources:
         Version: !GetAtt Ec2LaunchTemplate.LatestVersionNumber
       # TODO LifecycleHookSpecificationList
       MaxInstanceLifetime: 1209600 # 14 days
-      MaxSize: !If [IsProduction, "0", "20"] # TODO Set prod to ~50
+      MaxSize: !If [IsProduction, "50", "20"] # TODO Set prod to ~50
       MetricsCollection:
         - Granularity: 1Minute
-      MinSize: !If [IsProduction, "0", "0"] # TODO Set prod to ~7
+      MinSize: !If [IsProduction, "7", "0"]
       NewInstancesProtectedFromScaleIn: true
       # TODO NotificationConfigurations
       Tags:
