--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -262,7 +262,7 @@ Resources:
         Version: !GetAtt Ec2LaunchTemplate.LatestVersionNumber
       # TODO LifecycleHookSpecificationList
       MaxInstanceLifetime: 1209600 # 14 days
-      MaxSize: !If [IsProduction, "50", "20"] # TODO Set prod to ~50
+      MaxSize: !If [IsProduction, "50", "20"]
       MetricsCollection:
         - Granularity: 1Minute
       MinSize: !If [IsProduction, "7", "0"]
