Fix Redis env var

--- a/stacks/serverless/analytics-ingest-lambdas.yml
+++ b/stacks/serverless/analytics-ingest-lambdas.yml
@@ -180,7 +180,7 @@ Resources:
       Description: Dovetail analytics redis increments
       Environment:
         Variables:
-          REDIS_HOST: !Ref CastleRedisPrimaryEndPointAddress
+          REDIS_HOST: !Sub cluster://${CastleRedisPrimaryEndPointAddress}:6379
           REDIS_TTL: "7200"
           REDIS_IMPRESSIONS_HOST: !Ref RedisImpressionsHost
           REDIS_IMPRESSIONS_TTL: "90000"
