Create tagger functions for EC2 resources

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -474,10 +474,10 @@ Resources:
               const staleTags = previousTags.filter(p => !currentTagKeys.includes(p.Key));
 
               if (staleTags.length) {
-                  await cloudwatch.untagResource({
-                    ResourceARN: arn,
-                    TagKeys: staleTags.map(t => t.Key),
-                  }).promise();
+                await cloudwatch.untagResource({
+                  ResourceARN: arn,
+                  TagKeys: staleTags.map(t => t.Key),
+                }).promise();
               }
 
               // Create/update all values present in the current resource properties
@@ -560,6 +560,137 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Infrastructure }
 
+  Ec2ResourceTaggerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Architectures: [arm64]
+      Description: >-
+        Manages resource tags for EC2 resources, primarily to allow tagging of
+        resources like VPC Endpoints, for which CloudFormation doesn't support
+        tagging natively.
+      Handler: index.handler
+      InlineCode: |
+        const response = require('cfn-response');
+        const AWS = require('aws-sdk');
+        const ec2 = new AWS.EC2({
+          apiVersion: '2016-11-15'
+          maxRetries: 5,
+          retryDelayOptions: { base: 1100 }
+        });
+
+        exports.handler = async (event, context) => {
+          console.log(event);
+
+          try {
+            const tags = event.ResourceProperties.Tags;
+            const id = event.ResourceProperties.ResourceId;
+
+            if (!tags || !tags.length || !id) {
+              console.error('ResourceId and Tags properties must be defined');
+              await response.send(event, context, response.FAILED, {});
+            }
+
+            if (event.RequestType === 'Create') {
+              // Create all tags on the custom resource
+              await ec2.createTags({
+                Resources: [id],
+                Tags: tags,
+              }).promise();
+            } else if (event.RequestType === 'Update') {
+              // Remove tags that were present in the old resource properties, but are
+              // no longer present
+              const previousTags = event.OldResourceProperties.Tags;
+              const currentTagKeys = tags.map(t => t.Key);
+
+              const staleTags = previousTags.filter(p => !currentTagKeys.includes(p.Key));
+
+              if (staleTags.length) {
+                await ec2.deleteTags({
+                  Resources: [id],
+                  Tags: staleTags,
+                }).promise();
+              }
+
+              // Create/update all values present in the current resource properties
+              await ec2.createTags({
+                Resources: [id],
+                Tags: tags,
+              }).promise();
+            } else if (event.RequestType === 'Delete') {
+              // Remove all tags on the custom resource
+              await ec2.deleteTags({
+                Resources: [id],
+                Tags: tags,
+              }).promise();
+            }
+
+            await response.send(event, context, response.SUCCESS, {});
+          } catch (error) {
+            console.error(error);
+            await response.send(event, context, response.FAILED, {});
+          }
+        };
+      MemorySize: 128
+      Policies:
+        - Statement:
+            - Action:
+                - ec2:CreateTags
+                - ec2:DeleteTags
+              Effect: Allow
+              Resource: "*"
+          Version: "2012-10-17"
+      Runtime: nodejs12.x
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Infrastructure
+      Timeout: 60
+  Ec2ResourceTaggerFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${Ec2ResourceTaggerFunction}
+      RetentionInDays: 14
+  Ec2ResourceTaggerFunctionErrorAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ERROR [Infrastructure] EC2 Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmDescription: !Sub |-
+        ${EnvironmentType} stack custom resource function for tagging
+        EC2 resources is failing. This could mean that a stack update is
+        stalled, waiting for an HTTP callback from the function.
+
+        Be careful rolling back the stack; if the function fails again during
+        rollback it may become even more stuck. Making the callback request
+        manually may be possible, by looking at the function logs.
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref Ec2ResourceTaggerFunction
+      EvaluationPeriods: 1
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: 60
+      Statistic: Sum
+      Threshold: 0
+      TreatMissingData: notBreaching
+  Ec2ResourceTaggerFunctionErrorAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchAlarmTaggerFunction.Arn
+      AlarmArn: !GetAtt Ec2ResourceTaggerFunctionErrorAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
+
 Outputs:
   AmazonSesSmtpCredentialsGeneratorServiceToken:
     Description: Service token for the SES SMTP credentials generator
@@ -576,3 +707,6 @@ Outputs:
   CloudWatchAlarmTaggerServiceToken:
     Description: Service token for CloudWatch Alarm tagger
     Value: !GetAtt CloudWatchAlarmTaggerFunction.Arn
+  Ec2ResourceTaggerServiceToken:
+    Description: Service token for EC2 Resource tagger
+    Value: !GetAtt Ec2ResourceTaggerFunction.Arn
