Add resource tags to gateway endpoints

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -573,7 +573,7 @@ Resources:
         const response = require('cfn-response');
         const AWS = require('aws-sdk');
         const ec2 = new AWS.EC2({
-          apiVersion: '2016-11-15'
+          apiVersion: '2016-11-15',
           maxRetries: 5,
           retryDelayOptions: { base: 1100 }
         });
