--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -16,6 +16,7 @@ Parameters:
   RootStackId: { Type: String }
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
+  Ec2ResourceTaggerServiceToken: { Type: String }
   SharedVpcCidrBlock: { Type: String }
 
 Conditions:
@@ -177,6 +178,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
+        Ec2ResourceTaggerServiceToken: !Ref Ec2ResourceTaggerServiceToken
         VpcId: !Ref Vpc
         PublicSubnet1Id: !GetAtt PublicSubnetsStack.Outputs.Subnet1Id
         PublicSubnet2Id: !GetAtt PublicSubnetsStack.Outputs.Subnet2Id
@@ -197,6 +199,10 @@ Resources:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
       Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        Ec2ResourceTaggerServiceToken: !Ref Ec2ResourceTaggerServiceToken
         VpcId: !Ref Vpc
         PublicRouteTableId: !GetAtt PublicSubnetsStack.Outputs.RouteTableId
         PrivateRouteTableId: !GetAtt PrivateSubnetsStack.Outputs.RouteTableId
