--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -614,6 +614,7 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackId
         TemplateUrlPrefix: !Sub ${Constants.TemplateUrlBase}/stacks/shared-vpc
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+        Ec2ResourceTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.Ec2ResourceTaggerServiceToken
         SharedVpcCidrBlock: !Ref SharedVpcCidrBlock
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
