--- a/stacks/shared-vpc/gateway-endpoints.yml
+++ b/stacks/shared-vpc/gateway-endpoints.yml
@@ -4,6 +4,10 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Creates various Gateway VPC endpoints in the shared VPC
 
 Parameters:
+  EnvironmentType: { Type: String }
+  RootStackName: { Type: String }
+  RootStackId: { Type: String }
+  Ec2ResourceTaggerServiceToken: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
   PublicRouteTableId: { Type: String }
   PrivateRouteTableId: { Type: String }
@@ -19,6 +23,20 @@ Resources:
       ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
       VpcEndpointType: Gateway
       VpcId: !Ref VpcId
+  S3EndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref S3Endpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_s3" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   DynamoDbEndpoint:
     Type: AWS::EC2::VPCEndpoint
@@ -29,3 +47,17 @@ Resources:
       ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
       VpcEndpointType: Gateway
       VpcId: !Ref VpcId
+  DynamoDbEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref DynamoDbEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_ddb" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
