--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -32,6 +32,7 @@ Parameters:
   EnvironmentType: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
+  Ec2ResourceTaggerServiceToken: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
   PublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
   PublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
