Add resource tags to interface endpoints

--- a/stacks/shared-vpc/interface-endpoints.yml
+++ b/stacks/shared-vpc/interface-endpoints.yml
@@ -223,6 +223,20 @@ Resources:
         - !Ref PublicSubnet3Id
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
+  EcrDockerVpcEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref EcrDockerVpcEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_ecr-docker" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
   EcrApiVpcEndpoint:
     # https://docs.aws.amazon.com/AmazonECR/latest/userguide/vpc-endpoints.html#ecr-vpc-endpoint-considerations
     Type: AWS::EC2::VPCEndpoint
@@ -237,6 +251,20 @@ Resources:
         - !Ref PublicSubnet3Id
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
+  EcrApiVpcEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref EcrApiVpcEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_ecr-api" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   EcsAgentVpcEndpoint:
     Type: AWS::EC2::VPCEndpoint
@@ -277,6 +305,20 @@ Resources:
         - !Ref PublicSubnet3Id
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
+  EcsVpcEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref EcsVpcEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_ecs" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   CloudWatchLogsEndpointInboundTrafficSecurityGroup:
     # This security group is associated with the STS VPC Endpoint. Other
@@ -320,6 +362,20 @@ Resources:
         - !Ref PublicSubnet3Id
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
+  CloudWatchLogsVpcEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref CloudWatchLogsVpcEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_cloudwatch-logs" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   KmsEndpointInboundTrafficSecurityGroup:
     # This security group is associated with the KMS VPC Endpoint. Other
@@ -361,6 +417,20 @@ Resources:
         - !Ref PublicSubnet3Id
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
+  KmsVpcEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref KmsVpcEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_kms" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   StsEndpointInboundTrafficSecurityGroup:
     # This security group is associated with the STS VPC Endpoint. Other
@@ -402,6 +472,20 @@ Resources:
         - !Ref PublicSubnet3Id
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
+  StsVpcEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref StsVpcEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_sts" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   KinesisStreamsEndpointInboundTrafficSecurityGroup:
     # This security group is associated with the Kinesis Streams VPC Endpoint.
@@ -444,6 +528,20 @@ Resources:
         - !Ref PublicSubnet3Id
       VpcEndpointType: Interface
       VpcId: !Ref VpcId
+  KinesisStreamsVpcEndpointTags:
+    Type: Custom::Ec2ResourceTags
+    Properties:
+      ServiceToken: !Ref Ec2ResourceTaggerServiceToken
+      ResourceId: !Ref KinesisStreamsVpcEndpoint
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_shared_kinesis-streams" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
 Outputs:
   EcsLaunchEndpointsAccessSecurityGroupId:
