Add API version

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -443,6 +443,7 @@ Resources:
         const response = require('cfn-response');
         const AWS = require('aws-sdk');
         const cloudwatch = new AWS.CloudWatch({
+          apiVersion: '2010-08-01',
           maxRetries: 5,
           retryDelayOptions: { base: 1100 }
         });
