--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -561,6 +561,139 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Infrastructure }
 
+  CloudWatchLogGroupTaggerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Architectures: [arm64]
+      Description: >-
+        Manages resource tags for CloudWatch Logs log groups, primarily to
+        allow tagging of resources like VPC Endpoints, for which CloudFormation
+        doesn't support tagging natively.
+      Handler: index.handler
+      InlineCode: |
+        const response = require('cfn-response');
+        const AWS = require('aws-sdk');
+        const logs = new AWS.CloudWatchLogs({
+          apiVersion: '2014-03-28',
+          maxRetries: 5,
+          retryDelayOptions: { base: 1100 }
+        });
+
+        exports.handler = async (event, context) => {
+          console.log(event);
+
+          try {
+            const tags = event.ResourceProperties.Tags;
+            const name = event.ResourceProperties.LogGroupName;
+
+            if (!tags || !tags.length || !name) {
+              console.error('LogGroupName and Tags properties must be defined');
+              await response.send(event, context, response.FAILED, {});
+            }
+
+            const tagsObj = tags.reduce((p, c) => Object.assign(p, { [c.Name]: c.Value }), {});
+
+            if (event.RequestType === 'Create') {
+              // Create all tags on the custom resource
+              await logs.tagLogGroup({
+                logGroupName: name,
+                Tags: tagsObj,
+              }).promise();
+            } else if (event.RequestType === 'Update') {
+              // Remove tags that were present in the old resource properties, but are
+              // no longer present
+              const previousTags = event.OldResourceProperties.Tags;
+              const currentTagKeys = tags.map(t => t.Key);
+
+              const staleTags = previousTags.filter(p => !currentTagKeys.includes(p.Key));
+
+              if (staleTags.length) {
+                await logs.untagLogGroup({
+                  logGroupName: name,
+                  Tags: tags.map(t => t.Key),
+                }).promise();
+              }
+
+              // Create/update all values present in the current resource properties
+              await logs.tagLogGroup({
+                logGroupName: name,
+                Tags: tagsObj,
+              }).promise();
+            } else if (event.RequestType === 'Delete') {
+              // Remove all tags on the custom resource
+              await logs.untagLogGroup({
+                logGroupName: name,
+                Tags: tags.map(t => t.Key),
+              }).promise();
+            }
+
+            await response.send(event, context, response.SUCCESS, {});
+          } catch (error) {
+            console.error(error);
+            await response.send(event, context, response.FAILED, {});
+          }
+        };
+      MemorySize: 128
+      Policies:
+        - Statement:
+            - Action:
+                - logs:TagLogGroup
+                - logs:UntagLogGroup
+              Effect: Allow
+              Resource: "*"
+          Version: "2012-10-17"
+      Runtime: nodejs12.x
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Infrastructure
+      Timeout: 60
+  CloudWatchLogGroupTaggerFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${CloudWatchLogGroupTaggerFunction}
+      RetentionInDays: 14
+  CloudWatchLogGroupTaggerFunctionErrorAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ERROR [Infrastructure] Log Group Tagger <${EnvironmentTypeAbbreviation}> FUNCTION ERRORS
+      AlarmDescription: !Sub |-
+        ${EnvironmentType} stack custom resource function for tagging
+        CloudWatch log groups is failing. This could mean that a stack update
+        is stalled, waiting for an HTTP callback from the function.
+
+        Be careful rolling back the stack; if the function fails again during
+        rollback it may become even more stuck. Making the callback request
+        manually may be possible, by looking at the function logs.
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref CloudWatchLogGroupTaggerFunction
+      EvaluationPeriods: 1
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: 60
+      Statistic: Sum
+      Threshold: 0
+      TreatMissingData: notBreaching
+  CloudWatchLogGroupTaggerFunctionErrorAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchAlarmTaggerFunction.Arn
+      AlarmArn: !GetAtt CloudWatchLogGroupTaggerFunctionErrorAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
+
   Ec2ResourceTaggerFunction:
     Type: AWS::Serverless::Function
     Properties:
