--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -788,6 +788,19 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${Ec2ResourceTaggerFunction}
       RetentionInDays: 14
+  Ec2ResourceTaggerFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
+      LogGroupName: !Ref Ec2ResourceTaggerFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   Ec2ResourceTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -841,6 +854,9 @@ Outputs:
   CloudWatchAlarmTaggerServiceToken:
     Description: Service token for CloudWatch Alarm tagger
     Value: !GetAtt CloudWatchAlarmTaggerFunction.Arn
+  CloudWatchLogGroupTaggerServiceToken:
+    Description: Service token for CloudWatch Alarm tagger
+    Value: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
   Ec2ResourceTaggerServiceToken:
     Description: Service token for EC2 Resource tagger
     Value: !GetAtt Ec2ResourceTaggerFunction.Arn
