--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -597,7 +597,7 @@ Resources:
               // Create all tags on the custom resource
               await logs.tagLogGroup({
                 logGroupName: name,
-                Tags: tagsObj,
+                tags: tagsObj,
               }).promise();
             } else if (event.RequestType === 'Update') {
               // Remove tags that were present in the old resource properties, but are
@@ -610,20 +610,20 @@ Resources:
               if (staleTags.length) {
                 await logs.untagLogGroup({
                   logGroupName: name,
-                  Tags: tags.map(t => t.Key),
+                  tags: tags.map(t => t.Key),
                 }).promise();
               }
 
               // Create/update all values present in the current resource properties
               await logs.tagLogGroup({
                 logGroupName: name,
-                Tags: tagsObj,
+                tags: tagsObj,
               }).promise();
             } else if (event.RequestType === 'Delete') {
               // Remove all tags on the custom resource
               await logs.untagLogGroup({
                 logGroupName: name,
-                Tags: tags.map(t => t.Key),
+                tags: tags.map(t => t.Key),
               }).promise();
             }
 
